cmake_minimum_required(VERSION 3.13)

project(a_star)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_SOURCE_DIR}/../cmake_files/")

find_package(GDAL REQUIRED)
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(OpenGL REQUIRED)
find_package(Freetype REQUIRED)

include_directories(/usr/local/include)
include_directories(/usr/local/include/freetype2)
include_directories(../libs)
include_directories(${GDAL_INCLUDE_DIRS})

add_library(lib_repere STATIC ../libs/repere.cpp ../libs/repere.h)
add_library(lib_gl_utils STATIC ../libs/gl_utils.cpp ../libs/gl_utils.h)
add_library(lib_input_state STATIC ../libs/input_state.cpp ../libs/input_state.h)
add_library(lib_bbox STATIC ../libs/bbox.cpp ../libs/bbox.h)
add_library(lib_font STATIC ../libs/font.cpp ../libs/font.h)
add_library(lib_utile STATIC ../libs/utile.cpp ../libs/utile.h)
add_library(lib_geom_2d STATIC ../libs/geom_2d.cpp ../libs/geom_2d.h)
add_library(lib_polygon_2d STATIC ../libs/polygon_2d.cpp ../libs/polygon_2d.h)
add_library(lib_geom STATIC ../libs/geom.cpp ../libs/geom.h)
add_library(lib_shapefile STATIC ../libs/shapefile.cpp ../libs/shapefile.h)
add_library(lib_bbox_2d STATIC ../libs/bbox_2d.cpp ../libs/bbox_2d.h)
add_library(lib_graph STATIC ../libs/graph.cpp ../libs/graph.h)
add_library(lib_triangulation STATIC ../libs/triangulation.cpp ../libs/triangulation.h)
add_library(lib_convex_hull STATIC ../libs/convex_hull.cpp ../libs/convex_hull.h)
add_library(lib_obj_parser STATIC ../libs/obj_parser.cpp ../libs/obj_parser.h)

add_library(lib_const STATIC ./srcs/const.cpp ./srcs/const.h)
add_library(lib_elements STATIC ./srcs/elements.cpp ./srcs/elements.h)
add_library(lib_elevation STATIC ./srcs/elevation.cpp ./srcs/elevation.h)
add_library(lib_lake STATIC ./srcs/lake.cpp ./srcs/lake.h)
add_library(lib_map STATIC ./srcs/map.cpp ./srcs/map.h)
add_library(lib_path_finder STATIC ./srcs/path_finder.cpp ./srcs/path_finder.h)
add_library(lib_river STATIC ./srcs/river.cpp ./srcs/river.h)
add_library(lib_strategy STATIC ./srcs/strategy.cpp ./srcs/strategy.h)
add_library(lib_unit_type STATIC ./srcs/unit_type.cpp ./srcs/unit_type.h)
add_library(lib_unit STATIC ./srcs/unit.cpp ./srcs/unit.h)

add_executable(main ./srcs/main.cpp)

set(EXT_LIBS ${GDAL_LIBRARIES} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES})
set(GENERIC_LIBS lib_utile lib_geom_2d lib_polygon_2d lib_geom lib_shapefile lib_bbox_2d lib_graph lib_triangulation lib_repere lib_gl_utils lib_input_state lib_bbox lib_font lib_convex_hull lib_obj_parser)
set(SPECIFIC_LIBS lib_const lib_elements lib_elevation lib_lake lib_map lib_path_finder lib_river lib_strategy lib_unit_type lib_unit)

target_link_libraries(main PUBLIC ${EXT_LIBS})
target_link_libraries(main PUBLIC ${GENERIC_LIBS})
target_link_libraries(main PUBLIC ${SPECIFIC_LIBS})
